Bug 1522861 - ifdef out the profiler calls to IOInterposer on release and beta to match the IOInterposerInit behavior, r=mstange.